# wave-function-collapse

./: format.bat  pyproject.toml
src/: config.py  grid.py  main.py  munich_tile.py  pygame_base.py  resources.py  slot.py  t_tile.py  tile_base.py
tests/: test_munich_tile.py  test_slot.py
